objects/Library__c.object
<CustomObject>
    <fields>
        <fullName>Book_number__c</fullName>
        <label>Book number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Libraries</relationshipLabel>
        <relationshipName>Libraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>over_due_days__c</fullName>
        <formula>return_date__c   -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>over due days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>return_date__c</fullName>
        <formula>taken_date__c + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>return date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>taken_date__c</fullName>
        <label>taken date</label>
        <type>Date</type>
    </fields>
    <label>Library</label>
    <nameField>
        <label>Student Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>